# stm32-playground

./: .gitignore  README.md
blinky/: Makefile
f3/: README.md  openocd.cfg  stm32f3-openocd.cfg
f3/blinky/: Makefile  blinky.c
f3/cmake/: FindCMSIS.cmake  arm-gcc-toolchain.cmake
f3/discovery/blinky_nospl/: Makefile  main.c
f3/discovery/blinky_spl/: Makefile  README.md  main.c  system_stm32f30x.c
f3/discovery/dma_m2m/: Makefile
f3/discovery/serialvcp/: Makefile  README.md
f3/discovery/usart/: Makefile  main.c
f3/examples/: system_stm32f30x.c
f3/examples/blinky/: CMakeLists.txt  Makefile
f3/examples/serial/: usart.c.old
f3/examples/serialvcp/: Makefile
f3/lib/: .gitignore  Makefile  hw_config.h  usb_conf.h
f3/lib/CMSIS/CM1/DeviceSupport/ST/STM32F30x/: system_stm32f30x.h
f3/lib/vcp/: hw_config.c  platform_config.h
f3/serial/: Makefile  main.c  usart.c.old  usart.h
f4/: README.md  startup_stm32f405.S
f4/discovery/: README.md
f4/discovery/blinky_nospl/: README.md
f4/discovery/blinky_spl/: Makefile
f4/discovery/serialvcp/: main.c
f4/discovery/usart/: main.c
f4/examples/: system_stm32f4xx.c
f4/examples/blinky/: Makefile  blinky.c
f4/examples/serial/: Makefile  main.c
minimalist/: Makefile  README.md  main.c  stm32.ld
